fix: scrollbar issues

--- a/src/App.css
+++ b/src/App.css
@@ -16,3 +16,12 @@
   font-family: "Space Grotesk";
   src: url("../public/SpaceGrotesk-VariableFont_wght.ttf");
 }
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+
+.scrollbar-hide {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
